@@ -1196,6 +1196,11 @@
                 <td>Perforce User name to use</td>
             </tr>
             <tr>
+                <td>passwd</td>
+                <td>No</td>
+                <td>Perforce password to use</td>
+            </tr>
+            <tr class="oddrow">
                 <td>client</td>
                 <td>No</td>
                 <td>Perforce Client name to use</td>
@@ -2473,6 +2478,11 @@
                 <td>Perforce User name to use</td>
             </tr>
             <tr>
+                <td>passwd</td>
+                <td>No</td>
+                <td>Perforce password to use</td>
+            </tr>
+            <tr class="oddrow">
                 <td>view</td>
                 <td>Yes</td>
                 <td>Valid Perforce view (i.e. a depot path)</td>
